# game-engine

./: .gitignore  CMakeLists.txt  README.md  main.cpp
engine/include/engine/: AbstractDrawableFactory.hpp  AbstractGameObjectManager.hpp  AbstractPlatformFactory.hpp  AbstractPlayerFactory.hpp  AbstractUpdateableFactory.hpp  DefaultDrawableFactory.hpp  DefaultGameObjectManager.hpp  DefaultPlatformFactory.hpp  DefaultPlayerFactory.hpp  DefaultUpdateableFactory.hpp  Platform.hpp  Player.hpp
engine/src/: DefaultDrawableFactory.cpp  DefaultGameObjectManager.cpp  DefaultPlatformFactory.cpp  DefaultPlayerFactory.cpp  DefaultUpdateableFactory.cpp  Platform.cpp  Player.cpp  main.cpp
include/: AbstractDrawableFactory.hpp  AbstractGameObjectManager.hpp  AbstractPlatformFactory.hpp  AbstractPlayerFactory.hpp  AbstractUpdateableFactory.hpp  DefaultDrawableFactory.hpp  DefaultGameObjectManager.hpp  DefaultPlatformFactory.hpp  DefaultPlayerFactory.hpp  DefaultUpdateableFactory.hpp  GameObject.hpp  IBehaviorFactory.hpp  IDrawable.hpp  IGameObjectFactory.hpp  Platform.hpp  Player.hpp
include/engine/GameObject/Behavior/: IUpdateable.hpp
include/engine/GameObject/Derived/: Platform.hpp  Player.hpp
include/engine/GameObject/Management/: BehaviorFactoryTemplate.hpp  DerivedFactoryTemplate.hpp  GameObjectFactoryTemplate.hpp
src/: DefaultDrawableFactory.cpp  DefaultGameObjectManager.cpp  DefaultPlatformFactory.cpp  DefaultPlayerFactory.cpp  DefaultUpdateableFactory.cpp  Platform.cpp  Player.cpp  main.cpp
test/: TestGameObjectManager.cpp
(+20 files in other folders)
